--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
     "mariadb": "^3.4.0",
     "mysql2": "^3.11.3",
     "oracledb": "^6.6.0",
